2025-10-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (debug@big-dump): Report value of `debug*m` since we go
	to the trouble of defining it.  Delete temporary registers
	`debug*n` and `debug*m` after reporting them.

2025-10-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Improve usage diagnostics by not uselessly repeating
	the file name and line number of the package itself when
	diagnosing an invalid command-line setting, and not emitting a
	backtrace if debugging is enabled via the `D` register.
	(@usage): New macro throws diagnostic without reporting `\n[.F]`
	or `\n[.c]`.
	([initialization]): Call `@usage` instead of `@warning` when
	validating `D`, `E`, `L`, `O`, `W`, `S`, and `V` register
	values.

2025-08-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Rename API string `Capcon` (formerly `Licon`) to
	`Captc` to align with the naming convention used by `Capec`,
	`Capex`, `Capfg`, and `Captb`; the "Cap" ("caption") prefix is
	followed by the downcased name of the macro that interpolates
	the caption.
	* groff_mm.7.man (Strings): Document it.

2025-08-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Add new aliases `Ftnum` and `Rfnum` for the internal
	register names `ft*nr` and `ref*nr`, respectively.
	* groff_mm.7.man (Registers): Document them.

2025-08-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Rename API string `Tcst` to `Tcstatus` to make its
	purpose less obscure.  Its new name is no more lengthy than
	`Letnsdef`, and the package elsewhere uses "st" to abbreviate
	"string", as in the `GETST` macro.  Retain the old name as an
	alias.
	* groff_mm.7.man (Strings): Document it.

2025-08-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac ([initializtion): Configure a 3v margin (one half-inch
	when typesetting using the defaults of 10 point type on 12 point
	spacing) below the footer, instead of 2v.
	* tests/artifacts/letter_with_bottom_block: